gcc/testsuite/rust/rustc/ui/suggestions/do-not-attempt-to-add-suggestions-with-no-changes_dg.rs
use std::result;
impl result { // { dg-error ".E0573." "" { target *-*-* } }
    fn into_future() -> Err {} // { dg-error ".E0573." "" { target *-*-* } }
}
fn main() {}

